--- a/BDF-Chainlit-Chatbot/.env
+++ b/BDF-Chainlit-Chatbot/.env
@@ -1,12 +1,31 @@
 # .env
-CHAINLIT_AUTH_SECRET=
-CHAINLIT_PORT=8080
+
+# ChainLit required environmental variables
+# CHAINLIT_AUTH_SECRET is a secret string that is used to sign the authentication tokens. 
+# You can change it at any time, but it will log out all users. You can easily generate one using "chainlit create-secret" command
+# CHAINLIT_AUTH_SECRET=
+CHAINLIT_PORT=8000
+CHAINLIT_URL=http://localhost:8000
+
+# Enable password authentication
+ENABLE_PASSWORD_AUTH=true
+
+# Enable OAuth authentication
+ENABLE_OAUTH=true
+
+# Set your google authentication info here
 # OAUTH_GOOGLE_CLIENT_ID=
 # OAUTH_GOOGLE_CLIENT_SECRET=
-# CHAINLIT_URL=http://localhost:8080
-# # Force consent prompt for all providers
-# OAUTH_PROMPT=login
 
-# # Override specific provider to force login
-# OAUTH_GOOGLE_PROMPT=login
+OAUTH_PROMPT=login
+OAUTH_GOOGLE_PROMPT=login
 
+# Set your AWS access and secret keys
+# AWS_ACCESS_KEY=""
+# AWS_SECRET_KEY=""
+AWS_REGION="us-east-1"
+PUBLICATIONS_KB_ID="QZB0NZCXSB"
+
+# Change default model as needed
+DEFAULT_MODEL="us.anthropic.claude-3-5-sonnet-20241022-v2:0"
+DATA_LAYER_TABLE="chainlit_table"
