Fixed GDC query and updates to README with additional instructions

--- a/BDF-Chainlit-Chatbot/.env
+++ b/BDF-Chainlit-Chatbot/.env
@@ -7,10 +7,12 @@
 CHAINLIT_PORT=8000
 CHAINLIT_URL=http://localhost:8000
 
-# Enable password authentication
+
+# Having authentication either with email or Google OAuth is needed to preserve chatbot conversations history
+# Enable password authentication, we suggest to set to false for local testing
 ENABLE_PASSWORD_AUTH=true
 
-# Enable OAuth authentication
+# Enable OAuth authentication, we suggest to set to false for local testing
 ENABLE_OAUTH=true
 
 # Set your google authentication info here
@@ -23,9 +25,18 @@ OAUTH_GOOGLE_PROMPT=login
 # Set your AWS access and secret keys
 # AWS_ACCESS_KEY=""
 # AWS_SECRET_KEY=""
-AWS_REGION="us-east-1"
-PUBLICATIONS_KB_ID="QZB0NZCXSB"
+
+# Set your AWS region here, for example: us-east-1 
+AWS_REGION=""
+
+# Set your AWS Knowledge Base ID here, usually in a format "KB12345678"
+PUBLICATIONS_KB_ID=""
 
 # Change default model as needed
 DEFAULT_MODEL="us.anthropic.claude-3-5-sonnet-20241022-v2:0"
-DATA_LAYER_TABLE="chainlit_table"
+
+# Set name of a table that will hold chatbot conversations history
+DATA_LAYER_TABLE=""
+
+# API urls
+PDC_API=https://proteomic.datacommons.cancer.gov/graphql?query=
